tests/baselines/reference/for-of3.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of3.ts(2,6): error TS2487: The left-hand side of a 'for...of' statement must be a variable or a property access.
tests/cases/conformance/es6/for-ofStatements/for-of3.ts(2,13): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of3.ts (2 errors) ====
    var v: any;
    for (v++ of []) { }
         ~~~
!!! error TS2487: The left-hand side of a 'for...of' statement must be a variable or a property access.
                ~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.